<resources>
    <string name="app_name">Genealogy</string>
    <string name="ga5">Generation A5+</string>
    <string name="ga4">Generation A4</string>
    <string name="ga3">Generation A3</string>
    <string name="ga2">Generation A2</string>
    <string name="ga1">Generation A1</string>
    <string name="g0">Generation 0</string>
    <string name="gu1">Generation U1</string>
    <string name="gu2">Generation U2</string>
    <string name="gu3">Generation U3</string>
    <string name="gu4">Generation U4</string>
    <string name="gu5">Generation U5</string>
    <string name="memberid">MemberID</string>
    <string name="membername">MemberName</string>
    <string name="dob">DOB</string>
    <string name="not_assigned">Not assigned</string>
    <string name="dod">DOD</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="radio_male">radio_male</string>
    <string name="radio_female">radio_female</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_lbl_title">NEW MEMBER</string>
    <string name="add_lbl_name">Name</string>
    <string name="add_txt_name">Enter member name</string>
    <string name="add_lbl_gender">Gender</string>
    <string name="add_rd_male">Male</string>
    <string name="add_rd_female">Female</string>
    <string name="add_lbl_avatar">Avatar</string>
    <string name="add_lbl_dob">Date of Birth</string>
    <string name="add_lbl_relationship_with">Relationship with</string>
    <string name="add_lbl_relationship_type">Relationship type</string>
    <string name="add_rd_parents">Parents</string>
    <string name="add_rd_partner">Partner</string>
    <string name="add_rd_children">Children</string>
    <string name="add_lbl_paternal">Paternal</string>
    <string name="add_lbl_maternal">Maternal</string>
    <string name="add_btn_upload">Upload</string>
    <string name="add_btn_add">Create</string>
    <string name="add_lbl_dod">Date of Death</string>
    <string name="add_btn_search_member">Search</string>
    <string name="add_lbl_relationship_member">Member Name</string>
</resources>
